--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name= "${applicationName}"
         android:label="SpaceX GO!"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -30,6 +30,9 @@
                  screen fades out. A splash screen is useful to avoid any visual
                  gap between the end of Android's launch screen and the painting of
                  Flutter's first frame. -->
+            <meta-data
+                android:name="flutterEmbedding"
+                android:value="2" />
             <meta-data
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
               android:resource="@drawable/launch_background"
